--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
             thkks;al
         </title>
         <body>
-            <h1>ggggggggggggg</h1>
-            <h2>hjjdakjksj</h2>
-            <h3>hai man</h3>
+            <h1>HELLO JERIN</h1>
+            <h2>how ARE YOU</h2>
+            <h3>sample</h3>
         </body>
     </head>
 </html>
